--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "",
   "main": "server.js",
   "dependencies": {
+    "@azure/storage-blob": "^12.28.0",
     "ejs": "^3.1.8",
     "express": "^4.16.2",
     "multer": "^1.4.5-lts.1"
