--- a/package.json
+++ b/package.json
@@ -5,8 +5,10 @@
     "main": "server.js",
     "dependencies": {
         "@azure/storage-blob": "^12.28.0",
+        "cors": "^2.8.5",
+        "dotenv": "^17.2.1",
         "ejs": "^3.1.8",
-        "express": "^4.16.2",
+        "express": "^4.21.2",
         "multer": "^1.4.5-lts.1"
     },
     "scripts": {
